# bots

./: .gitignore  README.md  chambers.py  index.js  lytton.py  main.py  not-podracing.py  package-lock.json  package.json  podracing.js  pyproject.toml
.github/workflows/: main.yml  post-chambers.yml  post-lytton.yml  post-podracing.yml  post.yml
chambers/: chambers-adjectives.json  chambers-nouns.json
glitch-archive/chambers-pot/: bot.js  package.json
glitch-archive/lytton-tribune/: bot.js  masto.js  package.json
glitch-archive/not-podracing/: bot.js  package.json
lytton/: config.json  lytton_maps.py  lytton_text.py  main.js  masto.js
lytton/maps/: map-gen.js  map_gen.py
lytton/words/: clothes.json  containers.json  crimes.json  emoji.json  food.json  lytton_tracery.py  names.json  nouns.json  numbers.json  occupations.json  tracery-data.json  tracery-gen.js  weather.json
